5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1573_1334.log
== TEST (2019-03-13 13:56:44) 
-- CODE:
print("Adicao: 8", 5 + 3)

print("Subtracao: ", ...)

print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao: 8 8
Subtracao:  Ellipsis
Multiplicacao:  Ellipsis
Divisao:  Ellipsis
Resto:  Ellipsis
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:59:13) 
-- CODE:
print("Adicao: 8", 5 + 3)

print("Subtracao: 8", 10-2)

print("Multiplicacao: 8", 2*4)

print("Divisao: 8", 16/2)

print("Resto: 8", //0)

print("Potenciacao: 8", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: 8", //0)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:59:26) 
-- CODE:
print("Adicao: 8", 5 + 3)

print("Subtracao: 8", 10-2)

print("Multiplicacao: 8", 2*4)

print("Divisao: 8", 16/2)

print("Resto: 8", 0)

print("Potenciacao: 8", 2**3)
-- OUTPUT:
Adicao: 8 8
Subtracao: 8 8
Multiplicacao: 8 8
Divisao: 8 8.0
Resto: 8 0
Potenciacao: 8 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:59:46) 
-- CODE:
print("Adicao: 8", 5 + 3)

print("Subtracao: 8", 10-2)

print("Multiplicacao: 8", 2*4)

print("Divisao: 8", 16/2)

print("Resto: 8", 8)

print("Potenciacao: 8", 2**3)
-- OUTPUT:
Adicao: 8 8
Subtracao: 8 8
Multiplicacao: 8 8
Divisao: 8 8.0
Resto: 8 8
Potenciacao: 8 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:59:53) 
-- CODE:
print("Adicao: 8", 5 + 3)

print("Subtracao: 8", 10-2)

print("Multiplicacao: 8", 2*4)

print("Divisao: 8", 16/2)

print("Resto: 8", 8)

print("Potenciacao: 8", 2**3)
-- OUTPUT:
Adicao: 8 8
Subtracao: 8 8
Multiplicacao: 8 8
Divisao: 8 8.0
Resto: 8 8
Potenciacao: 8 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:59:55) 
-- CODE:
print("Adicao: 8", 5 + 3)

print("Subtracao: 8", 10-2)

print("Multiplicacao: 8", 2*4)

print("Divisao: 8", 16/2)

print("Resto: 8", 8)

print("Potenciacao: 8", 2**3)
-- EXECUTION TIME:
0.212329
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao: 8 8
Subtracao: 8 8
Multiplicacao: 8 8
Divisao: 8 8.0
Resto: 8 8
Potenciacao: 8 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:00:30) 
-- CODE:
print("Adicao: 8", 5 + 3)

print("Subtracao: 8", 10-2)

print("Multiplicacao: 8", 2*4)

print("Divisao: 8", 16/2)

print("Resto: 8", 0)

print("Potenciacao: 8", 2**3)
-- OUTPUT:
Adicao: 8 8
Subtracao: 8 8
Multiplicacao: 8 8
Divisao: 8 8.0
Resto: 8 0
Potenciacao: 8 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:00:33) 
-- CODE:
print("Adicao: 8", 5 + 3)

print("Subtracao: 8", 10-2)

print("Multiplicacao: 8", 2*4)

print("Divisao: 8", 16/2)

print("Resto: 8", 0)

print("Potenciacao: 8", 2**3)
-- EXECUTION TIME:
0.129355
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao: 8 8
Subtracao: 8 8
Multiplicacao: 8 8
Divisao: 8 8.0
Resto: 8 0
Potenciacao: 8 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:00:39) 
-- CODE:
print("Adicao: 8", 5 + 3)

print("Subtracao: 8", 10-2)

print("Multiplicacao: 8", 2*4)

print("Divisao: 8", 16/2)

print("Resto: 8", //0)

print("Potenciacao: 8", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: 8", //0)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:00:46) 
-- CODE:
print("Adicao: 8", 5 + 3)

print("Subtracao: 8", 10-2)

print("Multiplicacao: 8", 2*4)

print("Divisao: 8", 16/2)

print("Resto: 8", /0)

print("Potenciacao: 8", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: 8", /0)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:01:06) 
-- CODE:
print("Adicao: 8", 5 + 3)

print("Subtracao: 8", 10-2)

print("Multiplicacao: 8", 2*4)

print("Divisao: 8", 16/2)

print("Resto: 8", 8)

print("Potenciacao: 8", 2**3)
-- OUTPUT:
Adicao: 8 8
Subtracao: 8 8
Multiplicacao: 8 8
Divisao: 8 8.0
Resto: 8 8
Potenciacao: 8 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:01:06) 
-- CODE:
print("Adicao: 8", 5 + 3)

print("Subtracao: 8", 10-2)

print("Multiplicacao: 8", 2*4)

print("Divisao: 8", 16/2)

print("Resto: 8", 8)

print("Potenciacao: 8", 2**3)
-- OUTPUT:
Adicao: 8 8
Subtracao: 8 8
Multiplicacao: 8 8
Divisao: 8 8.0
Resto: 8 8
Potenciacao: 8 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:01:08) 
-- CODE:
print("Adicao: 8", 5 + 3)

print("Subtracao: 8", 10-2)

print("Multiplicacao: 8", 2*4)

print("Divisao: 8", 16/2)

print("Resto: 8", 8)

print("Potenciacao: 8", 2**3)
-- EXECUTION TIME:
0.297263
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao: 8 8
Subtracao: 8 8
Multiplicacao: 8 8
Divisao: 8 8.0
Resto: 8 8
Potenciacao: 8 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:01:54) 
-- CODE:
print("Adicao: 8", 5 + 3)

print("Subtracao: 8", 10-2)

print("Multiplicacao: 8", 2*4)

print("Divisao: 8", 16/2)

print("Resto: 8", 8)

print("Potenciacao: 8", 2**3)
-- OUTPUT:
Adicao: 8 8
Subtracao: 8 8
Multiplicacao: 8 8
Divisao: 8 8.0
Resto: 8 8
Potenciacao: 8 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:02:05) 
-- CODE:
print("Adicao: 8", 5 + 3)

print("Subtracao: 8", 10-2)

print("Multiplicacao: 8", 2*4)

print("Divisao: 8", 16/2)

print("Resto: 8", 8)

print("Potenciacao: 8", 2**3)
-- OUTPUT:
Adicao: 8 8
Subtracao: 8 8
Multiplicacao: 8 8
Divisao: 8 8.0
Resto: 8 8
Potenciacao: 8 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:06:21) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: 8", 10-2)

print("Multiplicacao: 8", 2*4)

print("Divisao: 8", 16/2)

print("Resto: 8", 17%3)

print("Potenciacao: 8", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao: 8 8
Multiplicacao: 8 8
Divisao: 8 8.0
Resto: 8 2
Potenciacao: 8 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:08:08) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 8)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:08:11) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 8)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.183716
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
